<resources>
    <string name="app_name">TPº4 - Almacenamiento Externo</string>
    <string name="id">ID</string>
    <string name="nombre">NOMBRE PRODUCTO</string>
    <string name="stock">STOCK</string>
    <string name="categoria">CATEGORIA</string>
    <string name="modificar">MODIFICAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="productos">PRODUCTOS:</string>
    <string name="agregar">Agregar</string>

</resources>