<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="562dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtID"
                android:text="@string/id"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/txtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:labelFor="@id/tvID"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvNombreProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>